--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ tonic-reflection = "0.10.0"
 prost = "0.12.0"
 futures = "0.3.28" # For streams if they are needed in the future
 
+# Sqlx dependencies
+sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
+
 # Serde
 serde = { version = "1.0.186", features = ["derive"] }
 serde_json = "1.0.105"
@@ -33,6 +36,8 @@ tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
 uuid ={ version = "1.4.1", features = ["serde", "v4", "fast-rng"] }
 strum_macros = "0.25.2"
 dotenv = "0.15.0"
+argon2 = "0.5.1"
+chrono = { version = "0.4.26", features = ["serde"] }
 
 [build-dependencies]
 tonic-build = "0.10.0"
