--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ futures = "0.3.28" # For streams if they are needed in the future
 # Sqlx dependencies
 sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
 
+# Redis dependencies
+deadpool-redis = { version = "0.12.0", features = ["serde"] }
+redis = { version = "0.23.3", default-features = false}
+
 # Serde
 serde = { version = "1.0.186", features = ["derive"] }
 serde_json = "1.0.105"
