--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
 [[bin]]
 name = "mandos"
 path = "src/main.rs"
@@ -43,3 +46,5 @@ chrono = { version = "0.4.26", features = ["serde"] }
 
 [build-dependencies]
 tonic-build = "0.10.0"
+
+[dev-dependencies]
